Send Slack notifications on failed builds on selected branches
CircleCI 2.0 doesn't support sending notifications for speficic
branches - it notifies on all branches once notifications are turned on.
This is quite noisy.

notify-slack script provides the needed functionality. It should be
called with on_success or on_fail as a build step.

SLACK_WEBHOOK_URL environment variable needs to be set up in CircleCI
with the appropriate Slack webhook url.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,11 @@ jobs:
               ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file secret.json
               ./google-cloud-sdk/bin/gcloud firebase test android run --app analytics-samples/analytics-sample/build/outputs/apk/debug/analytics-sample-debug.apk --test analytics-samples/analytics-sample/build/outputs/apk/androidTest/debug/analytics-sample-debug-androidTest.apk --device-ids Nexus6,hammerhead,sailfish --os-version-ids 19,21,22,23,24,25,26,27
             fi
+      - run:
+          name: Build Failed
+          when: on_fail
+          command: ./.circleci/notify-slack.sh
+          command: BUILD_STATUS="Failed" ./.circleci/notify-slack.sh
       - save_cache:
           paths:
             - ~/.gradle
