report test results

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,16 @@ jobs:
           name: Build
           command: ./gradlew check build assembleAndroidTest
       - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit 
+      - run:
           name: Run E2E Test
           command: |
             if [ "${RUN_E2E_TESTS}" == "true" ]; then
