--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
     classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.13.0'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
+    classpath 'gradle.plugin.ru.gildor.gradle.firebase.testlab:firebase-test-lab:0.1.1'
   }
 }
 
