--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ allprojects {
       mavenCentral()
       google()
       jcenter()
+      maven {
+        url 'https://plugins.gradle.org/m2/'
+      }
     }
   }
 
@@ -32,6 +35,9 @@ allprojects {
     mavenCentral()
     google()
     jcenter()
+    maven {
+      url 'https://plugins.gradle.org/m2/'
+    }
   }
 
   group = GROUP
