try and get amplitude device mode working

--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -45,4 +45,7 @@ dependencies {
   androidTestImplementation 'com.segment.backo:backo:1.0.0'
 
   androidTestImplementation 'org.assertj:assertj-core:1.7.1'
+
+  implementation 'com.segment.analytics.android.integrations:amplitude:+'
 }
+
