Fix Roboelectric resolution

--- a/gradle/android.gradle
+++ b/gradle/android.gradle
@@ -39,6 +39,12 @@ android {
     textOutput 'stdout'
     disable 'InvalidPackage', 'GradleCompatible'
   }
+
+  testOptions {
+    unitTests.all {
+     systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
+    }
+  }
 }
 
 spotless {
