--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -21,7 +21,7 @@ android {
   }
 
   defaultConfig {
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     buildConfigField 'String', 'WEBHOOK_AUTH_USERNAME', "\"$WEBHOOK_AUTH_USERNAME\""
     buildConfigField 'boolean', 'RUN_E2E_TESTS', "$RUN_E2E_TESTS"
@@ -32,17 +32,18 @@ dependencies {
   implementation project(':analytics')
   implementation project(':analytics-wear')
 
-  implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
-  implementation 'com.jakewharton:butterknife:8.8.1'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+  implementation 'io.github.inflationx:calligraphy3:3.1.1'
+  implementation 'io.github.inflationx:viewpump:2.0.3'
+  implementation 'com.jakewharton:butterknife:10.2.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
-  androidTestImplementation 'com.squareup.retrofit2:retrofit:2.3.0'
-  androidTestImplementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+  androidTestImplementation 'com.squareup.retrofit2:retrofit:2.8.1'
+  androidTestImplementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
 
-  androidTestImplementation 'com.android.support:support-annotations:27.1.1'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test:rules:1.0.2'
+  androidTestImplementation rootProject.ext.deps.supportAnnotations
+  androidTestImplementation 'androidx.test:runner:1.2.0'
+  androidTestImplementation 'androidx.test:rules:1.2.0'
   androidTestImplementation 'com.segment.backo:backo:1.0.0'
 
-  androidTestImplementation 'org.assertj:assertj-core:1.7.1'
+  androidTestImplementation 'org.assertj:assertj-core:3.16.1'
 }
