--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ POM_DEVELOPER_ID=segmentio
 POM_DEVELOPER_NAME=Segment, Inc.
 
 org.gradle.jvmargs=-Xmx1536m
+
+android.useAndroidX=true
+android.enableJetifier=true
