Add consumerProguardFiles for Proguard/R8

--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'com.getkeepsafe.dexcount'
 
 apply from: rootProject.file('gradle/android.gradle')
 
+android {
+  defaultConfig {
+    consumerProguardFiles 'proguard-rules-lib.txt'
+  }
+}
+
 dependencies {
   api rootProject.ext.deps.supportAnnotations
 
