add snyk contexxt for e2e test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,4 +78,5 @@ workflows:
                 - master
                 - scheduled_e2e_testing
     jobs:
-      - build
+      - build:
+          context: snyk
