--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-  repositories {
+    ext.kotlin_version = '1.3.72'
+    repositories {
     mavenCentral()
     google()
     jcenter()
@@ -13,6 +14,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
     classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.29.0'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.2'
+      classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
