--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 buildscript {
-    ext.kotlin_version = '1.4.0-rc'
-    repositories {
-    mavenCentral()
-    google()
-    jcenter()
-    maven {
-      url 'https://plugins.gradle.org/m2/'
-    }
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    }
+  ext.kotlin_version = '1.3.72'
+  repositories {
+  mavenCentral()
+  google()
+  jcenter()
+  maven {
+    url 'https://plugins.gradle.org/m2/'
+  }
+  maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+}
 
   dependencies {
     classpath 'com.android.tools.build:gradle:3.6.3'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
     classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.29.0'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.2'
-      classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
