converted LoggerTest to Kotlin and... (#678)
* converted LoggerTest to Kotlin and updated gradle files to include Kotlin support

* changed whitespaces from 4 to 2 in LoggerTest.kt

* updated build.gradle files to remove extra whitespace

* used linter to fix issues with CI failing and removed Kotlin plugins from modules that didn't use Kotlin files

--- a/analytics-samples/analytics-wear-sample/build.gradle
+++ b/analytics-samples/analytics-wear-sample/build.gradle
@@ -18,3 +18,6 @@ dependencies {
   implementation project(':analytics-wear')
   implementation 'androidx.wear:wear:1.0.0'
 }
+repositories {
+    mavenCentral()
+}
