--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -31,7 +31,7 @@ dependencies {
   // with Android.
   //noinspection GradleDependency
   testImplementation 'org.assertj:assertj-core:1.7.1'
-  implementation "androidx.core:core-ktx:+"
+  implementation "androidx.core:core-ktx:1.3.1"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
