--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     exclude group: 'org.apache.httpcomponents', module: 'httpclient'
   }
   testImplementation 'com.squareup.assertj:assertj-android:1.1.1'
-  testImplementation 'org.mockito:mockito-core:1.10.19'
   testImplementation 'com.squareup.okio:okio:1.14.0'
   testImplementation 'com.squareup.okhttp:mockwebserver:2.7.4'
   testImplementation 'com.squareup.burst:burst-junit4:1.1.1'
@@ -31,6 +30,7 @@ dependencies {
   // with Android.
   //noinspection GradleDependency
   testImplementation 'org.assertj:assertj-core:1.7.1'
+  testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
   implementation "androidx.core:core-ktx:1.3.1"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
