--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -13,6 +13,9 @@ android {
 dependencies {
   api rootProject.ext.deps.supportAnnotations
 
+  testImplementation fileTree(dir: 'libs', include: ['*.jar'])
+  testImplementation files('libs/objenesis-2.6.jar')
+
   implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
   implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
@@ -22,7 +25,6 @@ dependencies {
     exclude group: 'org.apache.httpcomponents', module: 'httpclient'
   }
   testImplementation 'com.squareup.assertj:assertj-android:1.1.1'
-  testImplementation 'org.mockito:mockito-core:1.10.19'
   testImplementation 'com.squareup.okio:okio:1.14.0'
   testImplementation 'com.squareup.okhttp:mockwebserver:2.7.4'
   testImplementation 'com.squareup.burst:burst-junit4:1.1.1'
@@ -31,6 +33,9 @@ dependencies {
   // with Android.
   //noinspection GradleDependency
   testImplementation 'org.assertj:assertj-core:1.7.1'
+  testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.0'
+  testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.9.0'
+  testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
   implementation "androidx.core:core-ktx:1.3.1"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
