--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,6 @@ workflows:
 #              only:
 #                - master
 #                - scheduled_e2e_testing
-    jobs:
-      - build:
-          context: snyk
+#    jobs:
+#      - build:
+#          context: snyk
