--- a/jsmiddleware/build.gradle
+++ b/jsmiddleware/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.8.1"
     implementation 'commons-io:commons-io:2.6'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
