--- a/gradle/android.gradle
+++ b/gradle/android.gradle
@@ -48,6 +48,11 @@ spotless {
     target '**/*.java'
     licenseHeader getLicenseText()
   }
+  kotlin {
+    ktlint('0.37.2').userData(['indent_size':'2', 'continuation_indent_size':'2', 'android':'true', ])
+    target '**/*.kt'
+    licenseHeader getLicenseText()
+  }
 }
 
 def getLicenseText() {
