--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -136,6 +136,7 @@ afterEvaluate { project ->
         }
 
         task androidJavadocs(type: Javadoc) {
+            excludes = ['**/*.kt']
             source = android.sourceSets.main.java.source
             classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
         }
