update gradle props and circleCI config

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-include ':analytics-samples:kotlin-sample'
 include 'analytics'
 include 'analytics-tests'
 include 'analytics-wear'
 include 'analytics-samples:analytics-sample'
 include 'analytics-samples:analytics-wear-sample'
+include 'analytics-samples:kotlin-sample'
