--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.29.0'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
   }
 }
 
@@ -51,7 +52,7 @@ def preDexEnabled = "true".equals(System.getProperty("preDex", "true"))
 
 ext {
   versionCode = Integer.parseInt(VERSION_CODE)
-  versionName = VERSION_NAME
+  versionName = getVersionName()
 
   minSdkVersion = 14
   minSdkVersionWear = 23
@@ -67,3 +68,13 @@ ext {
 ext.deps = [
   supportAnnotations: 'androidx.annotation:annotation:1.1.0'
 ]
+
+def isReleaseBuild() {
+  return hasProperty('release')
+}
+
+def getVersionName() { // If release build remove SNAPSHOT suffix
+  return isReleaseBuild() ? VERSION_NAME.replace('-SNAPSHOT', '') : VERSION_NAME
+}
+
+//apply from: rootProject.file('gradle/promote.gradle')
