--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,13 +62,13 @@ jobs:
                 exit 1
             } fi
             echo $SIGNING_PRIVATE_KEY_BASE64 | base64 -d > $SIGNING_SECRET_KEY_RING_FILE
-      - run:
-          name: Verify branch
-          command: |
-            if [ "$CIRCLE_BRANCH" != "master" ]; then {
-                echo "==> ignoring non-master branch"
-                exit 1
-            } fi
+#      - run:
+#          name: Verify branch
+#          command: |
+#            if [ "$CIRCLE_BRANCH" != "master" ]; then {
+#                echo "==> ignoring non-master branch"
+#                exit 1
+#            } fi
       - run:
           name: Publish SNAPSHOT
           command: ./gradlew uploadArchives
