run ci for tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,9 @@ workflows:
     jobs:
       - build:
           context: snyk
+          filters:
+            tags:
+              only: /.*/
       - publish_snapshot:
           context: android-sonatype
           requires: [ build ]
