--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=491
-VERSION_NAME=4.9.1-beta.1-SNAPSHOT
+VERSION_CODE=492
+VERSION_NAME=4.9.2
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
@@ -22,3 +22,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+Stable: 4.9.1 < 4.9.2-beta.1 < 4.9.2 < 
+Nightly: 4.9.1-SNAPSHOT < 4.9.2-SNAPSHOT < 4.9.3-SNAPSHOT
