--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -16,6 +16,7 @@
 
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply from: rootProject.file('gradle/versioning.gradle')
 
 version = VERSION_NAME
 group = GROUP
@@ -26,14 +27,6 @@ if (!hasProperty("signing.keyId")) {
     ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
     ext["NEXUS_USERNAME"] = System.getenv('NEXUS_USERNAME')
     ext["NEXUS_PASSWORD"] = System.getenv('NEXUS_PASSWORD')
-}
-
-def isReleaseBuild() {
-    return hasProperty('release')
-}
-
-def getVersionName() { // If release build remove SNAPSHOT suffix
-    return isReleaseBuild() ? VERSION_NAME.replace('-SNAPSHOT', '') : VERSION_NAME
 }
 
 def getReleaseRepositoryUrl() {
