Update circle CI config and gradle scripts to setup auto-deploy (#737)
* update gradle props and circleCI config

* fix yaml

* try snapshot release

* fix config

* fix config

* ignore verifyig branch for now

* accept licenses

* switch to sonatype repo

* add verification step back

* create 4.9.0-beta version

* fix versioning

* run ci for tags

* close and release repo

* add sleep

* fix promote.gradle

* dont error when ignoring branch

* upgrade version name

* close and release repo

* remove snapshot release for tags

* delete Webhook kt

* update RELEASING.md

* remove branch verification for snapshot

* update version name

* update releasing docs

* update releasing docs

* upgrade releasing steps

* upgrade releasing steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/android:api-28-alpha
     environment:
-      JVM_OPTS: -Xmx3200m
+      JVM_OPTS: -Xmx6400m
       CIRCLE_JDK_VERSION: oraclejdk8
     steps:
       - checkout
@@ -29,17 +29,6 @@ jobs:
           environment:
             SNYK_FAIL_ON: upgradable
             SNYK_SEVERITY_THRESHOLD: high
-#      - run:
-#          name: Run E2E Test
-#          command: |
-#            if [ "${RUN_E2E_TESTS}" == "true" ]; then
-#              echo "${FIREBASE_TOKEN}" >> "secret.json"
-#              curl -O https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.zip
-#              unzip -qq google-cloud-sdk.zip
-#              ./google-cloud-sdk/bin/gcloud config set project analytics-android-e2e-test
-#              ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file secret.json
-#              ./google-cloud-sdk/bin/gcloud firebase test android run --app analytics-samples/analytics-sample/build/outputs/apk/debug/analytics-sample-debug.apk --test analytics-samples/analytics-sample/build/outputs/apk/androidTest/debug/analytics-sample-debug-androidTest.apk --device-ids Nexus6,hammerhead,sailfish --os-version-ids 19,21,22,23,24,25,26,27
-#            fi
       - run:
           name: Build Failed
           when: on_fail
@@ -54,29 +43,87 @@ jobs:
       - run:
           name: Upload code coverage reports
           command: bash <(curl -s https://codecov.io/bash)
+  publish_snapshot:
+    working_directory: ~/analytics-android
+    docker:
+      - image: circleci/android:api-28-alpha
+    environment:
+        JVM_OPTS: -Xmx3200m
+        CIRCLE_JDK_VERSION: oraclejdk8
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "analytics/build.gradle" }}-{{ checksum  "analytics-samples/analytics-sample/build.gradle" }}
       - run:
-          name: Deployment
+          name: Accept licenses
+          command: yes | sdkmanager --licenses || true
+      - run:
+          name: Set up key ring file
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              .buildscript/deploy_snapshot.sh
-            else
-              echo "==> ignoring non-master branch"
-            fi
+            if [ "$SIGNING_PRIVATE_KEY_BASE64" == "" ]; then {
+                echo "Invalid signature configuration"
+                exit 1
+            } fi
+            echo $SIGNING_PRIVATE_KEY_BASE64 | base64 -d > $SIGNING_SECRET_KEY_RING_FILE
+      - run:
+          name: Publish SNAPSHOT
+          command: ./gradlew uploadArchives
+  publish:
+    working_directory: ~/analytics-android
+    docker:
+      - image: circleci/android:api-28-alpha
+    environment:
+        JVM_OPTS: -Xmx3200m
+        CIRCLE_JDK_VERSION: oraclejdk8
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "analytics/build.gradle" }}-{{ checksum  "analytics-samples/analytics-sample/build.gradle" }}
+      - run:
+          name: Accept licenses
+          command: yes | sdkmanager --licenses || true
+      - run:
+          name: Set up key ring file
+          command: |
+            if [ "$SIGNING_PRIVATE_KEY_BASE64" == "" ]; then {
+                echo "Invalid signature configuration"
+                exit 1
+            } fi
+            echo $SIGNING_PRIVATE_KEY_BASE64 | base64 -d > $SIGNING_SECRET_KEY_RING_FILE
+      - run:
+          name: Verify tag
+          command: |
+            VERSION=$(grep VERSION_NAME gradle.properties | awk -F= '{ print $2 }' | sed "s/-SNAPSHOT//")
+            if [ "$CIRCLE_TAG" != "$VERSION" ]; then {
+                echo "Tag $CIRCLE_TAG does not match the package version ($VERSION)"
+                exit 1
+            } fi
+      - run:
+          name: Publish Release
+          command: ./gradlew uploadArchives -Prelease
+      - run:
+          name: Mark release
+          command: ./gradlew closeAndReleaseRepository
 workflows:
   version: 2
-  build_and_test:
+  run:
     jobs:
       - build:
           context: snyk
-#  scheduled_e2e_test:
-#    triggers:
-#      - schedule:
-#          cron: "20 * * * *"
-#          filters:
-#            branches:
-#              only:
-#                - master
-#                - scheduled_e2e_testing
-#    jobs:
-#      - build:
-#          context: snyk
+          filters:
+            tags:
+              only: /.*/
+      - publish_snapshot:
+          context: android-sonatype
+          requires: [ build ]
+          filters:
+            branches:
+              only: [/master/]
+      - publish:
+          context: android-sonatype
+          requires: [ build ]
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /[0-9]+.*/
