--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -16,12 +16,17 @@
 
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply from: rootProject.file('gradle/versioning.gradle')
 
 version = VERSION_NAME
 group = GROUP
 
-def isReleaseBuild() {
-    return VERSION_NAME.contains("SNAPSHOT") == false
+if (!hasProperty("signing.keyId")) {
+    ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
+    ext["signing.password"] = System.getenv('SIGNING_KEY_PASSWORD')
+    ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
+    ext["NEXUS_USERNAME"] = System.getenv('NEXUS_USERNAME')
+    ext["NEXUS_PASSWORD"] = System.getenv('NEXUS_PASSWORD')
 }
 
 def getReleaseRepositoryUrl() {
@@ -50,7 +55,7 @@ afterEvaluate { project ->
 
                 pom.groupId = GROUP
                 pom.artifactId = POM_ARTIFACT_ID
-                pom.version = VERSION_NAME
+                pom.version = getVersionName()
 
                 repository(url: getReleaseRepositoryUrl()) {
                     authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
@@ -103,7 +108,7 @@ afterEvaluate { project ->
 
                 pom.groupId = GROUP
                 pom.artifactId = POM_ARTIFACT_ID
-                pom.version = VERSION_NAME
+                pom.version = getVersionName()
 
                 pom.project {
                     name POM_NAME
@@ -155,7 +160,7 @@ afterEvaluate { project ->
             repositories.mavenInstaller {
                 pom.groupId = GROUP
                 pom.artifactId = POM_ARTIFACT_ID
-                pom.version = VERSION_NAME
+                pom.version = getVersionName()
 
                 pom.project {
                     name POM_NAME
