add conditional to protect failing against local file urls

--- a/gradle/mvn-publish.gradle
+++ b/gradle/mvn-publish.gradle
@@ -106,9 +106,11 @@ publishing {
             url = version.endsWith('SNAPSHOT') ? getSnapshotRepositoryUrl() : getReleaseRepositoryUrl()
 
             // The username and password we've fetched earlier
-            credentials {
-                username NEXUS_USERNAME
-                password NEXUS_PASSWORD
+            if (!getUrl().toString().startsWith("file:/")) {
+                credentials {
+                    username NEXUS_USERNAME
+                    password NEXUS_PASSWORD
+                }
             }
         }
     }
