add sovran and plugin stuff

--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -13,6 +13,7 @@ android {
 dependencies {
 	api rootProject.ext.deps.supportAnnotations
 
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	testImplementation fileTree(dir: 'libs', include: ['*.jar'])
 	testImplementation files('libs/objenesis-2.6.jar')
 
