--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.getkeepsafe.dexcount'
-
+apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 apply from: rootProject.file('gradle/android.gradle')
 
 android {
@@ -39,11 +39,13 @@ dependencies {
 	testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 	implementation "androidx.core:core-ktx:1.3.1"
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
 }
 
 apply from: rootProject.file('gradle/mvn-publish.gradle')
 
 repositories {
+	maven { url "https://kotlin.bintray.com/kotlinx" }
 	maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
 	mavenCentral()
 }
