--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	implementation "androidx.core:core-ktx:1.3.1"
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
+
+	api 'com.mixpanel.android:mixpanel-android:5.6.7'
 }
 
 apply from: rootProject.file('gradle/mvn-publish.gradle')
