--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
-apply from: rootProject.file('gradle/mvn-publish.gradle')
+//apply from: rootProject.file('gradle/mvn-publish.gradle')
 repositories {
 	mavenCentral()
 }
