--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,8 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=segmentio
 POM_DEVELOPER_NAME=Segment, Inc.
 
-org.gradle.jvmargs=-Xmx4096m
+org.gradle.jvmargs=-Xmx2048m
+android.enableAapt2=false
 org.gradle.daemon=false
 android.useAndroidX=true
 android.enableJetifier=true
