--- a/analytics-samples/kotlin-sample/src/main/AndroidManifest.xml
+++ b/analytics-samples/kotlin-sample/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:name=".SampleApp">
         <activity android:name=".SampleApp"/>
         <activity android:name=".ScreenActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
