--- a/analytics-samples/analytics-wear-sample/src/main/AndroidManifest.xml
+++ b/analytics-samples/analytics-wear-sample/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
       android:theme="@android:style/Theme.DeviceDefault">
     <activity
         android:name=".MainActivity"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
