--- a/analytics-samples/kotlin-sample/build.gradle
+++ b/analytics-samples/kotlin-sample/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-	compileSdkVersion 30
-	buildToolsVersion "30.0.2"
+	compileSdkVersion 32
 
 	defaultConfig {
 		applicationId "com.example.kotlin_sample"
 		minSdkVersion 29
-		targetSdkVersion 30
+		targetSdkVersion 32
 		versionCode 1
 		versionName "1.0"
 
@@ -44,7 +43,7 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.2.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 	testImplementation 'junit:junit:4.12'
-	androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 	implementation project(':analytics')
@@ -57,8 +56,7 @@ dependencies {
 	androidTestImplementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
 
 	androidTestImplementation rootProject.ext.deps.supportAnnotations
-	androidTestImplementation 'androidx.test:runner:1.3.0'
-	androidTestImplementation 'androidx.test:rules:1.3.0'
+	androidTestImplementation 'androidx.test:core:1.4.0'
 	androidTestImplementation 'com.segment.backo:backo:1.0.0'
 
 	androidTestImplementation 'org.assertj:assertj-core:3.16.1'
