fix publication error

--- a/gradle/mvn-publish.gradle
+++ b/gradle/mvn-publish.gradle
@@ -21,6 +21,11 @@ if (!hasProperty("signing.keyId")) {
 }
 
 task androidJavadocs(type: Javadoc) {
+    failOnError false
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+
     source = android.sourceSets.main.java.source
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
     android.libraryVariants.all { variant ->
